// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// Message format for the MojoLPM fuzzer for the AdAuctionService interface.

syntax = "proto2";

package content.fuzzing.ad_auction_service.proto;

import "content/browser/interest_group/ad_auction_service_mojolpm_fuzzer_stringifiers.proto";
import "third_party/blink/public/mojom/interest_group/ad_auction_service.mojom.mojolpm.proto";

// Bind a new AdAuctionService remote
message NewAdAuctionServiceAction {
  required uint32 id = 1;
}

// Run the specific sequence for (an indeterminate) period. This is not
// intended to create a specific ordering, but to allow the fuzzer to delay a
// later task until previous tasks have completed.
message RunThreadAction {
  enum ThreadId {
    IO = 0;
    UI = 1;
  }

  required ThreadId id = 1;
}

// Runs RunUntilIdle() on the test adapter task environment. This is often
// necessary to wait for completion of AdAuctionService API implementation
// threads, like the database thread, so that result callbacks from the database
// can run on the UI thread.
message RunUntilIdle {}

message NetResponseAction {
  optional content.fuzzing.ad_auction_service.proto.Script script = 1;
  // TODO(crbug.com/41490389): Add more response types.
}

// Actions that can be performed by the fuzzer.
message Action {
  oneof action {
    NewAdAuctionServiceAction new_ad_auction_service = 1;
    RunThreadAction run_thread = 2;
    RunUntilIdle run_until_idle = 4;
    NetResponseAction net_response_action = 5;
    mojolpm.blink.mojom.AdAuctionService.RemoteAction
        ad_auction_service_remote_action = 3;
  }
}

// Sequence provides a level of indirection which allows Testcase to compactly
// express repeated sequences of actions.
message Sequence {
  repeated uint32 action_indexes = 1 [packed = true];
}

// Testcase is the top-level message type interpreted by the fuzzer.
message Testcase {
  repeated Action actions = 1;
  repeated Sequence sequences = 2;
  repeated uint32 sequence_indexes = 3 [packed = true];
}
